
Update to libast 0.6+ API.
----------------------------------------------------------------------
Fri Feb 24 16:58:43 2006                        Michael Jennings (mej)

Add fallback attempt to open display in case NEED_LINUX_HACK is set
and shouldn't be.
----------------------------------------------------------------------
Wed May 17 15:42:28 2006                        Michael Jennings (mej)

Patch from Kim Woelders <kim@woelders.dk> to optimize transparent
Eterms moved an even multiple of the desktop size (i.e., to another
desktop area).
----------------------------------------------------------------------
Fri May 19 16:46:02 2006                        Michael Jennings (mej)

Fixed a problem that's been bugging me for ages:  Instead of a
hard-coded delay, wait until we can connect to the ssh forwarding port
before starting the Escreen session via ssh.

Add usleep() to system() wait so as to not peg the CPU while sitting
and spinning.
----------------------------------------------------------------------
Sat Jun 17 23:06:03 2006                        Michael Jennings (mej)

Daniel Macks <dmacks@netspace.org> noticed that gdb.scr wasn't being
installed.  Oops.  Fixed now.
----------------------------------------------------------------------
Fri Aug 18 13:41:14 2006                        Michael Jennings (mej)

Addressed licensing concerns.
----------------------------------------------------------------------
Tue Aug 22 14:07:23 2006                        Michael Jennings (mej)

Forgot one.
----------------------------------------------------------------------
Tue Aug 22 14:38:15 2006                        Michael Jennings (mej)

Eterm 0.9.4 is final.
----------------------------------------------------------------------
Tue Sep 19 17:07:28 2006                        Michael Jennings (mej)

libscream.c is licensed just like Eterm.
----------------------------------------------------------------------